--- a/asset/spectra-pandas.ipynb
+++ b/asset/spectra-pandas.ipynb
@@ -290,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#local only\n",
+    "# local only\n",
     "# casts = pd.read_csv('/Users/ulidder/Downloads/spectra-data/cast.csv')\n",
     "# release_dates = pd.read_csv('/Users/ulidder/Downloads/spectra-data/release_dates.csv')\n",
     "# titles = pd.read_csv('/Users/ulidder/Downloads/spectra-data/titles.csv')\n",
@@ -727,10 +727,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For the movie Straight Outta Compton, can you print the cast in alphabetical order, but only those members who have a n value\n",
+    "#For the movie Straight Outta Compton, can you print the cast in alphabetical order, but only those members who have a n value\n",
     "soc = casts.loc[casts.title == 'Straight Outta Compton']\n",
     "soc = soc.loc[~soc.n.isnull()]\n",
     "#your turn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#what is the syntax to sort a series? Look up the syntax here and complete the code below ...\n",
+    "#https://pandas.pydata.org/pandas-docs/stable/reference/series.html\n",
+    "casts.loc[:,'title']"
    ]
   },
   {
@@ -907,6 +918,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Charts and Plots!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -990,6 +1008,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# How many different movies have \"Hamlet\" in the title?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the hamlet releases by year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# What are the 11 most common character names in movie history?"
    ]
   },
@@ -1026,7 +1062,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the n values for Jamie Fox over his career"
+    "# How many people played themselves ?"
    ]
   },
   {
@@ -1214,6 +1250,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## We have learned quite a few tricks so far. See if you can complete these exercises:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# look up all movies with Jamie Foxx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Look up all movies that end with Rings or rings or RINGS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Look up all moves that have the word “park” in them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What is the most popular cast name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How many different characters was this name used for ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Who is Bess Flowers?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<h1>Bess Flowers</h1>\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/en/4/43/Stooge053Bessflowers.jpg\"></img>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#we can even plot two charts in one\n",
+    "cast[cast.name == 'Jamie Foxx'].plot(x='year',y='n', kind='scatter', color='r', label='Jammie Foxx')\n",
+    "cast[cast.name == 'Chris Pratt'].plot(x='year',y='n', kind='scatter', color='g', ax = ax1, label='Chris Pratt')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## casts and location dataframes have similar infomation, is there a way to SQL JOIN them? Why, yes! Thanks for asking!"
    ]
   },
@@ -1308,7 +1435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 11"
+    "## Exercise 12"
    ]
   },
   {
@@ -1346,7 +1473,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#how many actors in “lord of the rings”\n",
+    "lotr = cast[cast.title.str.lower().str.contains('lord of the ring')]\n",
+    "lotr.groupby(['title'])[['n']].count()"
+   ]
   }
  ],
  "metadata": {
