--- a/asset/spectra-pandas.ipynb
+++ b/asset/spectra-pandas.ipynb
@@ -983,7 +983,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#very cool! Third one's the charm! Your turn to use value_counts()"
+    "#very cool! Third one's the charm!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#we can even plot two charts in one. Remember the n value is where the cast name appears in the cast list at the end of the movie. So the lower is better.\n",
+    "#let's see how Jammie Foxx compares to Chris Pratt over their careers\n",
+    "# import matplotlib.pyplot as plt\n",
+    "\n",
+    "#we can even plot two charts in one\n",
+    "ax1 = casts[casts.name == 'Jamie Foxx'].plot(x='year',y='n', kind='scatter', color='r', label='Jammie Foxx')\n",
+    "casts[casts.name == 'Chris Pratt'].plot(x='year',y='n', kind='scatter', color='g', ax = ax1, label='Chris Pratt')\n"
    ]
   },
   {
@@ -1324,17 +1339,6 @@
     "<h1>Bess Flowers</h1>\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/en/4/43/Stooge053Bessflowers.jpg\"></img>\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#we can even plot two charts in one\n",
-    "cast[cast.name == 'Jamie Foxx'].plot(x='year',y='n', kind='scatter', color='r', label='Jammie Foxx')\n",
-    "cast[cast.name == 'Chris Pratt'].plot(x='year',y='n', kind='scatter', color='g', ax = ax1, label='Chris Pratt')\n"
    ]
   },
   {
