--- a/asset/spectra-pandas.ipynb
+++ b/asset/spectra-pandas.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# you can install packages from pypip as usual. \n",
-    "!pip3 install pyjokes"
+    "!pip install pyjokes"
    ]
   },
   {
@@ -1580,7 +1580,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
@@ -1594,7 +1594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
